FRONT HTML e CSS - Sobre - pronto
FRONT HTML e CSS - Pagina de Quem somos - pronto

--- a/soulteam/css/css.css
+++ b/soulteam/css/css.css
@@ -44,6 +44,12 @@ main > section{
   font-weight: bold;
   font-size: 1.2rem;
 }
+.img-sobre-info{
+  min-width: 425px;
+}
+.img-sobre-info-med{
+  max-width:750px;
+}
 
 /*@media only screen and (max-width : 992px) {
 
